[project]
name = "contrastive-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dtaidistance",
    "plotly>=6.0.0",
    "torchsig",
    "numcodecs<0.16.0",
    "tensorboard>=2.19.0",
]

[project.scripts]
contrastive-sandbox = "contrastive_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torchsig = { git = "https://github.com/TorchDSP/torchsig.git", rev = "v1.1.0" }

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
]
